fix: footer links no more underlined on hover on mobile

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,9 +20,8 @@
 
   a {
     color: $gray;
-    &:hover {
+    &:hover,&:focus {
         color: $gray;
-        text-decoration: underline;
     }
     @include mobile {
       line-height: 2em;
